<resources>
    <string name="app_name">proyecto-integrador-2</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Perfil</string>
    <string name="menu_slideshow">Contactos</string>
    <string name="logo">Logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="registrarse">Registrarse</string>
    <string name="login">Login</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="telefono">Telefono</string>
</resources>