<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/login_fragment">

    <fragment
        android:id="@+id/login_fragment"
        android:name="com.example.proyecto_integrador_2.ui.login.LoginFragment"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_login_to_home"
            app:destination="@+id/nav_home"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />

        <action
            android:id="@+id/action_login_to_register"
            app:destination="@+id/register_fragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/register_fragment"
        android:name="com.example.proyecto_integrador_2.ui.register.RegisterFragment"
        tools:layout="@layout/fragment_register">

        <action
            android:id="@+id/action_register_to_home"
            app:destination="@+id/nav_home"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />

    </fragment>
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.proyecto_integrador_2.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_profileDetailFragment2"
            app:destination="@id/profileDetailFragment2" />
    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.proyecto_integrador_2.ui.profile.ProfileFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_contacts"
        android:name="com.example.proyecto_integrador_2.ui.slideshow.ContactsFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/profileDetailFragment2"
        android:name="com.example.proyecto_integrador_2.ui.home.ProfileDetailFragment"
        android:label="fragment_profile_detail"
        tools:layout="@layout/fragment_profile_detail">
        <argument
            android:name="user_id"
            app:argType="string" />
    </fragment>
</navigation>